--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-Dizem que eu sou cachaceiro
-Cachaceiro eu não sou
-Cachaceiro é quem fabrica pinga
-Eu sou só consumidor
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
