--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
    <h1>isso é um título</h1> 
    <h2>isso é um subtítulo</h2>
-   <h6>misecórdia</h6>
+   <h6>patota</h6>
 </body>
 </html>
