--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>isso é um título</h1> 
-   <h2>isso é um subtítulo</h2>
-   <h6>patota</h6>
+   <h1>A BARBEARIA ALURA</h1> 
 </body>
 </html>
