--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
 <p style="text-align: center;">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
 <h2>BENEFÍCIOS</h2>
+
+<ul>
+<LI>Atendimento aos clientes;</LI>
+<LI>Espaço diferenciado;</LI>
+<LI>Localização;</LI>
+<LI>Profissionais qualificados.</LI>
+</ul>
 </body>
 </html>
