--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Barbearia Alura</title>
 </head>
-
+<img= src="https://pm1.aminoapps.com/6366/fa790d170dac5d6b1504d794a15608aba32c7f99_00.jpg"
 <body>
    
     <h1 style="text-align: center;">SOBRE A BARBEARIA ALURA</h1>
