--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <img= src="https://toppng.com/uploads/preview/mike-wazowski-blurry-115628847856extzyw1vc.png"
+    <img= src="https://toppng.com/uploads/preview/mike-wazowski-blurry-115628847856extzyw1vc.png">
     <h1 style="text-align: center;">SOBRE A BARBEARIA ALURA</h1>
    
     <p style="text-align: center;">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
