--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    
+  
+    <img src="" alt="Barbearia Alura"
+
     <h1 style="text-align: center;">SOBRE A BARBEARIA ALURA</h1>
    
     <p style="text-align: center;">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
