--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   
-    <img src="" alt="Barbearia Alura"
+    <img src="banner[1].jpg" alt="Barbearia Alujpg
 
     <h1 style="text-align: center;">SOBRE A BARBEARIA ALURA</h1>
    
