--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <LI>Profissionais qualificados.</LI>
 </ul>
 
+<img class="beneficios" src="beneficios.jpg" alt="Beneficios"
+
 </body>
 
 </html>
