--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   
     <img class="banner" src="banner[1].jpg" alt="Barbearia Alura">
-
+<div>
     <h1 style="text-align: center;">SOBRE A BARBEARIA ALURA</h1>
    
     <p style="text-align: center;">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
@@ -19,7 +19,9 @@
 <p style="font-size: 20px; text-align: center;">Nossa missão é: <em><strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
 
 <p style="text-align: center;">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-
+</div>
+<div>
+    
 <h2>BENEFÍCIOS</h2>
 
 <ul>
@@ -30,6 +32,8 @@
 </ul>
 
 <img class="beneficios" src="beneficios.jpg" alt="Beneficios"
+
+</div>
 
 </body>
 
